--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Funky Site</title>
 </head>
 <body>
-    <h1>funky site with charles!</h1>
+    <h1>funky site with charles! hi im charles</h1>
 </body>
 </html>
