--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-  <h1>funky site with charles! hi im charles</h1>
+  <div class="box-border h-32 w-100% bg-black">
+    <h1 class="text-white">Funky Site!</h1>
+  </div>
   <script type="module" src="/main.js"></script>
 </body>
 
