--- a/client/index.html
+++ b/client/index.html
@@ -7,10 +7,11 @@
   <title>Funky Site</title>
 </head>
 
-<body>
-  <div class="box-border h-32 w-100% bg-black">
-    <h1 class="text-white">Funky Site!</h1>
+<body class="bg-gradient-to-r from-green-200 via-green-400 to-purple-700">
+  <div class="box-border h-32 w-100% bg-black/[.7] flex items-center justify-center">
+    <h1 class="text-white text-3xl text-center">Funky Site!</h1>
   </div>
+  
   <script type="module" src="/main.js"></script>
 </body>
 
