yea i added myself
hi

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
 <body class="bg-gradient-to-r from-green-200 via-green-400 to-purple-700">
   <div class="box-border h-32 w-100% bg-black/[.7] flex items-center justify-center">
     <h1 class="text-white text-3xl text-center">Funky Site!</h1>
+    <h2 class="text-white text-5xl text-center">With charles!</h2>
   </div>
   
   <script type="module" src="/main.js"></script>
