--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta content="Funky Site!" property="og:title" />
+  <meta content="Welcome to the official Funky Town website!" property="og:description" />
+  <meta content="funkytown.land" property="og:url" />
+  <meta content="https://media.discordapp.net/attachments/892232951264321597/1137269503995166840/hewill.PNG?width=495&height=701" property="og:image" />
+  <meta content="#800080" data-react-helmet="true" name="theme-color" />
   <title>Funky Site</title>
 </head>
 
