--- a/client/index.html
+++ b/client/index.html
@@ -4,14 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <t
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta content="Funky Site!" property="og:title" />
   <meta content="Welcome to the official Funky Town website!" property="og:description" />
   <meta content="funkytown.land" property="og:url" />
   <meta content="https://media.discordapp.net/attachments/892232951264321597/1137269503995166840/hewill.PNG?width=495&height=701" property="og:image" />
   <meta content="#800080" data-react-helmet="true" name="theme-color" />
   <title>Funky Site - Funky town but the website</title>
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
 </head>
 
 <body class="bg-gradient-to-r from-green-200 via-green-400 to-purple-700">
