--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
   <meta content="https://media.discordapp.net/attachments/892232951264321597/1137269503995166840/hewill.PNG?width=495&height=701" property="og:image" />
   <meta content="#800080" data-react-helmet="true" name="theme-color" />
   <title>Funky Site - Funky town but the website</title>
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/assets/image.ico">
 </head>
 
 <body class="bg-gradient-to-r from-green-200 via-green-400 to-purple-700">
@@ -18,6 +18,9 @@
     <h1 class="text-white text-3xl text-center">Funky Site!</h1>
     <h2 class="text-white text-5xl text-center">With charles!</h2>
   </div>
+
+  <br>
+  <img class="items-center" src="/assets/collab.png"/>
   
   <script type="module" src="/main.js"></script>
 </body>
