funky town flag drop shadow

--- a/client/index.html
+++ b/client/index.html
@@ -20,8 +20,10 @@
   </div>
 
   <br>
-  <img class="items-center" src="/assets/collab.png"/>
-  
+  <center>
+  <img style="border-radius: 12px; box-shadow: 10px 10px 8px black;" src="/assets/collab.png"/>
+  </center>
+    
   <script type="module" src="/main.js"></script>
 </body>
 
