Vitaler site information

--- a/client/index.html
+++ b/client/index.html
@@ -24,9 +24,12 @@
   <img style="border-radius: 12px; box-shadow: 10px 10px 8px black;" src="/assets/collab.png"/>
   </center>
     
+  <br>
+  <br>
+  <hr>
   <a href="https://farawaydrip30.github.io">
     the fara way
-   <img src="https://avatars.steamstatic.com/2ee96e063172008fed1291e987355c19a242650b_full.jpg">
+   <img style="width: 100px;" src="https://avatars.steamstatic.com/2ee96e063172008fed1291e987355c19a242650b_full.jpg">
   </a>
   
   <script type="module" src="/main.js"></script>
