--- a/client/index.html
+++ b/client/index.html
@@ -32,6 +32,14 @@
    <img style="width: 100px;" src="https://avatars.steamstatic.com/2ee96e063172008fed1291e987355c19a242650b_full.jpg">
   </a>
   
+  <hr>
+  <br>
+  <h1>kill yourself?</h1>
+  <h2>;)</h2>
+  <br>
+  
+  <iframe width="420" height="315" src="https://youtube.com/embed/gYj9patm44I"></iframe>
+  
   <script type="module" src="/main.js"></script>
 </body>
 
