--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
   <meta content="Funky Site!" property="og:title" />
   <meta content="Welcome to the official Funky Town website!" property="og:description" />
   <meta content="funkytown.land" property="og:url" />
-  <meta content="https://media.discordapp.net/attachments/892232951264321597/1137269503995166840/hewill.PNG?width=495&height=701" property="og:image" />
+  <meta content="https://cdn.discordapp.com/attachments/834084079334326273/995121216069316629/Untitled24_20220708201613.jpg" property="og:image" />
   <meta content="#800080" data-react-helmet="true" name="theme-color" />
   <title>Funky Site - Funky town but the website</title>
   <link rel="icon" type="image/x-icon" href="/assets/image.ico">
