--- a/client/index.html
+++ b/client/index.html
@@ -15,34 +15,33 @@
 
 <body class="bg-gradient-to-r from-green-200 via-green-400 to-purple-700">
   <div class="box-border h-32 w-100% bg-black/[.7] flex items-center justify-center">
-    <h1 class="text-white text-3xl text-center">Funky Site!</h1>
-    <h2 class="text-white text-5xl text-center">With charles!</h2>
+    <h1 class="text-white text-7xl text-center">Funky Site!</h1>
   </div>
 
-  <br>
+  <center class="p-10"><img style="border-radius: 12px; box-shadow: 10px 10px 8px black;" src="/assets/collab.png"/></center>
+  <hr>
+
+  <div class="items-center justify-center flex text-center">
+    <a href="https://farawaydrip30.github.io" class="p-5">
+      the fara way
+      <img style="width: 100px;" src="https://avatars.steamstatic.com/2ee96e063172008fed1291e987355c19a242650b_full.jpg">
+    </a>
+    <a href="https://badagoo.github.io/pinnysite/" class="p-5">
+      pinny
+      <img style="width: 100px;" src="https://media.discordapp.net/attachments/905322029476106311/1134881906467553290/f077f7e8931b4e6ba5697dac3df4d06a.png">
+    </a>
+    <a href="https://rafael-flines.github.io" class="p-5">
+      flinner
+      <img style="width: 100px;" src="https://media.discordapp.net/attachments/834084079334326273/1137655626013626438/image.png">
+    </a>
+  </div>
+
+  <hr>
   <center>
-  <img style="border-radius: 12px; box-shadow: 10px 10px 8px black;" src="/assets/collab.png"/>
+    <h1>kill yourself - I WILL</h1>
+    <iframe width="420" height="315" src="https://youtube.com/embed/gYj9patm44I"></iframe>
   </center>
-    
-  <br>
-  <br>
-  <hr>
-  <a href="https://farawaydrip30.github.io">
-    the fara way
-   <img style="width: 100px;" src="https://avatars.steamstatic.com/2ee96e063172008fed1291e987355c19a242650b_full.jpg">
-  </a>
-  <br>
-    
-  <hr>
-  <br>
-    <center>
-  <h1>kill yourself</h1>
-  
-  <br>
-  
-  <iframe width="420" height="315" src="https://youtube.com/embed/gYj9patm44I"></iframe>
-  </center>
-  
+  meow :3
   <script type="module" src="/main.js"></script>
 </body>
 
