--- a/client/index.html
+++ b/client/index.html
@@ -38,7 +38,7 @@
 
   <hr>
   <center>
-    <h1>kill yourself - I WILL</h1>
+    <h1>kill yourself</h1>
     <iframe width="420" height="315" src="https://youtube.com/embed/gYj9patm44I"></iframe>
   </center>
   meow :3
