--- a/client/index.html
+++ b/client/index.html
@@ -40,8 +40,8 @@
 
   <hr>
   <center>
-    <h1>kill yourself</h1>
-    <iframe width="420" height="315" src="https://youtube.com/embed/gYj9patm44I"></iframe>
+    <h1>best video??</h1>
+    <iframe style="border-radius: 12px; box-shadow: 10px 10px 10px 8px black;" width="500" height="333" src="https://www.youtube.com/watch?v=pW4794VUcdE"></iframe>
   </center>
   meow :3
   <script type="module" src="/main.js"></script>
