--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,7 @@
     </a>
     <a href="https://rafael-flines.github.io" class="p-5">
       flinner
-      <img style="width: 100px;" src="https://media.discordapp.net/attachments/834084079334326273/1137655626013626438/image.png">
+      <img style="width: 100px;" src="https://cdn.discordapp.com/attachments/834084079334326273/1139320030568382494/logo_128.png">
     </a>
   </div>
 
