--- a/client/index.html
+++ b/client/index.html
@@ -41,7 +41,7 @@
   <hr>
   <center>
     <h1>best video??</h1>
-    <iframe style="border-radius: 12px; box-shadow: 10px 10px 10px 8px black;" width="500" height="333" src="https://www.youtube.com/embed/pW4794VUcdE?si=Mf8HApLJGU2alzwK"></iframe>
+    <iframe style="border-radius: 12px; box-shadow: 10px 10px 10px 8px black;" width="500" height="333" src="https://www.youtube.com/embed/L4gH6XMPArM"></iframe>
   </center>
   meow :3
   <script type="module" src="/main.js"></script>
