theme song update
i added the theme song to the website because im really genius

--- a/client/index.html
+++ b/client/index.html
@@ -43,6 +43,10 @@
     <h1>best video??</h1>
     <iframe style="border-radius: 12px; box-shadow: 10px 10px 10px 8px black;" width="500" height="333" src="https://www.youtube.com/embed/L4gH6XMPArM"></iframe>
   </center>
+  <hr>
+  <center>
+  <audio class="audioPlayer" id="audioPlayer" controls><source src="./assets/theme.mp3" type="audio/mpeg"></audio>
+  </center>
   meow :3
   <script type="module" src="/main.js"></script>
 </body>
